--- a/public/style.css
+++ b/public/style.css
@@ -76,7 +76,6 @@
         margin: 0;
         padding: 0;
         width: 100%;
-        overflow: hidden;
     }
 
     nav{
@@ -471,4 +470,64 @@
         align-items: center;
         justify-content: center;
         margin-top: 10px;
+      }
+      
+      .input-field{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        width: 100%;
+        height: 100%;
+      }
+
+      .input-field p{
+        font-weight: 500;
+      }
+
+      .first-input input{
+        width: 100%;
+        height: 50px;
+        border: 2px solid silver;
+        border-radius: 10px;
+        outline: none;
+        padding: 10px;
+        font-size: 1em;
+        transition: 200ms;
+      }
+
+
+      .first-input input::placeholder{
+        font-size: 1em;
+      }
+
+      .first-input input:focus-within , .first-input input:not(:placeholder-shown){
+        border: 2px solid #974921;
+      }
+
+
+      .second-input textarea{
+        width: 100%;
+        height: 150px;
+        resize: none;
+        padding: 10px;
+        outline: none;
+        border-radius: 10px;
+        font-size: 0.9em;
+        border: 2px solid silver;
+      }
+
+      .second-input textarea::placeholder{
+       font-size: 1em;
+      }
+
+      .note-rslt{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        gap: 10px;
+        background-color: #ecf5f9;
+        color: #000;
+        padding: 10px;
+        border-radius: 10px;
       }
